@@ -249,6 +249,15 @@ DEFUN(RAWSOCK:SOCKETPAIR,domain type protocol) {
 }
 #endif
 
+#if defined(HAVE_SOCKATMARK)
+DEFUN(RAWSOCK:SOCKATMARK, sock) {
+  rawsock_t sock = posfixnum_to_L(check_posfixnum(popSTACK()));
+  int retval;
+  SYSCALL(retval,sock,sockatmark(sock));
+  VALUES_IF(retval);
+}
+#endif
+
 /* process optional (struct sockaddr*) argument:
    NIL: return NULL
    T: allocate
@@ -329,8 +338,7 @@ DEFUN(RAWSOCK:LISTEN,socket backlog) {
 
 #if defined(HAVE_POLL)
 DEFUN(RAWSOCK:POLL,sockets) {
-  skipSTACK(1);
-  VALUES0;
+  NOTREACHED;
 }
 #endif
 
