@@ -29,8 +29,8 @@ Sockets are represented by their &fixnum-t; &file-des;s.</para>
   <member>&ntohl;</member><member>&ntohs;</member>
   <member>&recv;</member><member>&recvfrom;</member><member>&recvmsg;</member>
   <member>&send;</member><member>&sendmsg;</member><member>&sendto;</member>
-  <member>&socket;</member><member>&socketpair;</member>
-  <member>&shutdown;</member></simplelist>
+  <member>&socket;</member><member>&sockatmark;</member>
+  <member>&socketpair;</member><member>&shutdown;</member></simplelist>
  using same-named lisp functions in package
  <quote role="package">RAWSOCK</quote>.
  Additionally,<itemizedlist>
